--- a/css/styles.css
+++ b/css/styles.css
@@ -694,7 +694,10 @@ height: 30px;
 border: 1px solid rgba(0, 0, 0, 0.1);
 border-radius: 50%;
 cursor: pointer;
+background-color: var(--primary-white-color);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
+
 
 /* Home WORK 6 */
 .form{
@@ -846,15 +849,23 @@ display: flex;
 align-items: center;
 padding: 10px 28px;
 min-width: 200px;
+margin: 0;
 }
 .subscribe-pic{
 margin-left: 10px;
 }
 .lastone{
 height: 150px;
-flex-wrap: wrap;
+/* flex-wrap: wrap; */
 }
 .button-subscribe{
 margin-top: 48px;
 margin-left: 12px;
+}
+.form-footer{
+display: flex;
+gap: 12px;  
+}
+.close-modal:hover{
+fill: var(--accent-color);
 }
